# dev_metrics_bot

./: .gitignore  LICENSE  Makefile  README.md  example.env  pyproject.toml  setup.py
.github/workflows/: style.yaml
src/: web.py
src/bot/: router.py  view.py
src/bot/handlers/: any.py  get.py  help.py  router.py  start.py
src/bot/messages/: formatters.py  github.py  start.py
src/core/: container.py  settings.py
src/domain/entities/: command.py  github.py  telegram.py
src/domain/services/: github.py
src/domain/use_cases/: github.py
src/gateways/github/: client.py  interface.py  models.py
src/gateways/redis/: client.py  interface.py
src/gateways/telegram/: client.py  interface.py  models.py
src/services/: github.py
src/utils/: escape.py
